[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyzab"
version = "0.0.8"
authors = [
  { name="Lucas Rocha Abraão", email="lucasrabraao@gmail.com" },
]
description = "Simple Python implementation of the Zabbix API."
readme = "README.md"
license = { text = "GNU General Public License v3 (GPLv3)" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-dotenv",
    "requests",
]
package-dir = "src"

[project.urls]
"Homepage" = "https://github.com/LucasRochaAbraao/pyzab"
"Bug Tracker" = "https://github.com/LucasRochaAbraao/pyzab/issues"